--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         
 <body>
 <div class="download">
-<button><a href="https://drive.google.com/file/d/1g5EnIcw9WVLXmfaF01P5r6bwAg8HVYrE/view?usp=share_link" download="https://drive.google.com/file/d/1ASJIaiSqrtOIkA2aj7VYKIHz4Y2cOMYE/view?usp=share_link" class="btn">Download Resume</a>
+<button><a href="https://drive.google.com/drive/folders/1HWMgGhWavzZiYNiGxEVY4T2-kF2-xUnl?usp=drive_link" download="https://drive.google.com/drive/folders/1HWMgGhWavzZiYNiGxEVY4T2-kF2-xUnl?usp=drive_link" class="btn">Download Resume</a>
 </button>
 </div>      
 </body>
