--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h1>MS SQL</h1>
           </div>
           <div class="project-img">
-            <img src="https://i.pinimg.com/564x/a9/d6/b3/a9d6b3b2ded570c852e7a8aea21f3327.jpg" alt="img">
+            <img src="https://www.dice.com/binaries/medium/content/gallery/dice/insights/2021/12/shutterstock_1467043322.jpg" alt="img">
           </div>
         </div>
         <div class="project-item">
