--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <h1 class="section-title">work<span>experience</span></h1>
         <h2></h2>
-        <p>*  I worked as a customer executive in MEERA LASER SOLUTIONS PVT.LTD</p>
+       <!--  <p>*  I worked as a customer executive in MEERA LASER SOLUTIONS PVT.LTD</p> -->
         <BR>
           
             
