--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
          </div>
         </div>
 <br>
-<br>
+<br> <br>
 
         <h1 class="section-title">work<span>experience</span></h1>
         <h2></h2>
@@ -224,7 +224,7 @@
           <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
           <div class="contact-info">
             <h1>Address</h1>
-            <h2>NO.10, NGGO Colony, Poonga Nagar,Thiruvallur</h2>
+            <h2>NO.10, 3rd Street, Vidhya Nagar, Chennai-600091</h2>
           </div>
         </div>
       </div>
