--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h1>HTML and CSS</h1>
           </div>
           <div class="project-img">
-             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7jaKYr5OefuzwWSsFB4mULRWE_0nmrGLQSkL4VEUcB9DC43YQZHOYHVnIlKUmEYkhXzg&usqp=CAU" alt="img">
+             <img src="https://i.pinimg.com/564x/a9/d6/b3/a9d6b3b2ded570c852e7a8aea21f3327.jpg" alt="img">
         </div>
         </div>
         <div class="project-item">
