--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>C,C++</h1>
+            <h1>Python, React JS</h1>
           </div>
           <div class="project-img">
             <img src="https://i.pinimg.com/564x/a9/d6/b3/a9d6b3b2ded570c852e7a8aea21f3327.jpg" alt="img">
